--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,32 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.ref-border{
+  border: 1px solid red;
+  margin: 3px;
+  padding: 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.stylePrimary
+{
+  border: 1px solid red;
+  background-color:red;
+  padding: 5px;
+  color:white;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.styleSecondary{
+  border: 1px solid green;
+  background-color:green;
+  padding: 5px;
+  color:white;
+}
+
+.information-card{
+  max-width: 200px;
+  border: 1px solid red;
+  padding: 5px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  align-items: center;
 }
